Update jekyll site structure and files

--- a/index.html
+++ b/index.html
@@ -1,36 +1,67 @@
 ---
 layout: default
-title: SarahMay Harel
+title: About - SarahMay Harel
 ---
 
 <div class="intro row">
-    <div class="col text-center">
-        <img src="https://i.imgur.com/niPt6xp.png" class="circle">
+    <div class="col-lg-6 col-sm-12 text-center">
+        <img src="https://i.imgur.com/niPt6xp.png" class="circle mt-5">
     </div>
 
-    <div class="col pr-5">
-        <h2>Hi, I’m SarahMay</h2>
-        <p>I am a website development professional with experience in direct-to-consumer front-end development for Craft
+    <div class="col-lg-6 col-sm-12 intro-text">
+        <h2 class="pt-5 intro-name">Hi, I’m SarahMay</h2>
+        <p class="pt-5 intro-body">I am a website development professional with experience in direct-to-consumer front-end development for Craft
             and WordPress CMS, and Shopify Liquid templates. I am the technical lead for website operations, project
             management, and product marketing at the digital operations department at Workman Publishing, an independent
             book publisher. In my spare time, I enjoy doing crossword puzzles and sudoku, baking, and cultivating the
             80+ plants in my apartment.</p>
     </div>
 </div>
-
-<h2>Skills</h2>
-
+<div class="pt-5">
+    <h2 class="text-center">Skills</h2>
+</div>
 <div class="skills row">
-    <div class="col">
+    <div class="col m-5 text-right">
         Front-end Development<br>
         eCommerce<br>
         AWS S3<br>
         Adobe Creative Suite
     </div>
-    <div class="col">
+    <div class="col m-5">
         UX/UI<br>
         Project Management<br>
         Google Analytics<br>
         MailChimp
     </div>
+</div>
+
+<div class="pt-5">
+    <h2 class="text-center">Experience</h2>
+</div>
+<div class="experience contained">
+    <h5>Assistant Director, Website Operations and eCommerce</h5>
+    <p><em>Workman Publishing (2017 &ndash; Present)</em></p>
+    <ul>
+        <li>Oversee 20+ websites on a mixture of WordPress, Craft, &amp; static pages hosted in AWS S3</li>
+        <li>Supervise infrastructure re-architecture projects, and relaunches for author &amp; brand websites</li>
+        <li>Technical lead for front-end eCommerce and UI/UX development, using HTML, CSS and Shopify&rsquo;s Ruby-based
+            template language, Liquid</li>
+        <li>Analyze and report on website, eCommerce, &amp; newsletter analytics to inform business strategy</li>
+        <li>Participate as a lead member of Diversity, Equity, &amp; Inclusion Committee, 4 subcommittees</li>
+    </ul>
+    <h5>Member, Diversity, Equity, and Inclusion Committee</h5>
+    <p><em>Workman Publishing (2020 &ndash; 2022)</em></p>
+    <ul>
+        <li>Participate as a lead member of Diversity, Equity, &amp; Inclusion oversight committee</li>
+        <li>Developed company mission statement</li>
+        <li>Launched, directed, and co-wrote the Workman DEI newsletter</li>
+        <li>Created Read With Pride landing page, merchandising plan, and successfully advocated to have leadership read
+            a written statement honoring Pride Month in June 2021</li>
+    </ul>
+    <h5>Principal Draftsperson</h5>
+    <p><em>Epstein Engineering P.C. (2014 &ndash; 2017)</em></p>
+    <ul>
+        <li>Developed technical drawings of residential and commercial buildings using AutoCAD</li>
+        <li>Filed plans and engineering reports with government agencies</li>
+    </ul>
 </div>
