--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: About - SarahMay Harel
 ---
 
 <div class="intro row">
-    <div class="col-lg-6 col-sm-12 text-center">
+    <div class="col-lg-6 col-sm-12 text-center headshot">
         <img src="https://i.imgur.com/niPt6xp.png" class="circle mt-5">
     </div>
 
@@ -21,13 +21,13 @@ title: About - SarahMay Harel
     <h2 class="text-center">Skills</h2>
 </div>
 <div class="skills row">
-    <div class="col m-5 text-right">
+    <div class="col-md-6 col-sm-12 text-center">
         Front-end Development<br>
         eCommerce<br>
         AWS S3<br>
         Adobe Creative Suite
     </div>
-    <div class="col m-5">
+    <div class="col-md-6 col-sm-12 text-center">
         UX/UI<br>
         Project Management<br>
         Google Analytics<br>
