Add project page and start content structure

--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,51 @@
 ---
 layout: default
-title: About - SarahMay Harel
+title: Projects - SarahMay Harel
 ---
 
+<div class="project-intro pt-5">
+    <h2 class="pb-0">Customized Shopify Templates</h2>
+    <p class="project-stack">2021/eCommerce Strategy, Shopify Liquid, Ruby</p>
+</div>
+
+<div class="row">
+    <div class="col-md-8 col-sm-12">
+        <img src="assets/img/workman-cart-mobile-1.webp" class="project-image">
+    </div>
+
+    <div class="col-md-4 col-sm-12 project-info">
+        <p>
+            <b>Role:</b>
+            <br>
+            UX/UI + Front End Developer
+            <br>
+            <br>
+            <b>Date:</b>
+            <br>
+            2020 - 2021
+            <br>
+        </p>
+    </div>
+</div>
+
+<div class="project-overview">
+    <h3>Overview</h3>
+    <ul>
+        <li>Implemented calculator script that shows &ldquo;You are $__ away from free shipping&rdquo; + Continue Shopping link. This feature increased average order value by 15%.</li>
+        <li>Advocated for and eventually implemented language cautioning customers about shipping delays, and deterring the use of P.O. box addresses during the height of eCommerce season. This feature reduced customer complaints by close to 20%, and saved an average of $1,400 in shipping costs.</li>
+        <li>Implemented &ldquo;Gift Messaging&rdquo; text input area for customers sending orders as gifts for the holidays.</li>
+        <li>Collaborated with 3rd party developers to implement &ldquo;Similar Products&rdquo; in cart promoting upsells and increasing average order value.</li>
+    </ul>
+</div>
+
+<div class="row pt-5">
+    <div class="col-md-8 col-sm-12">
+      <img src="assets/img/workman-similar-products-tablet.webp" class="project-image">
+    </div>
+    <div class="col-md-4 col-sm-12">
+      <img src="assets/img/workman-gift-messaging-mobile.webp" class="project-image mb-3">
+      <img src="assets/img/workman-cart-mobile-2.webp" class="project-image">
+    </div>
+  </div>
+
+  <hr>
