Update colors, fons, and add oval headshot

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: About - SarahMay Harel
 
 <div class="intro row">
     <div class="col-lg-6 col-sm-12 text-center headshot">
-        <img src="https://i.imgur.com/niPt6xp.png" class="circle mt-5">
+        <img src="/assets/img/harel_sarahmay_headshot.JPG" class="circle mt-5">
     </div>
 
     <div class="col-lg-6 col-sm-12 intro-text">
