Add padding rule

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: About - SarahMay Harel
 </div>
 
 
-<div class="intro pb-5 row pt-0 ">
+<div class="intro pb-5 row pt-0 padrule">
     <div class="col-lg-6 col-sm-12 text-center headshot">
         <img src="/assets/img/harel_sarahmay_headshot.JPG" class="circle">
     </div>
@@ -27,7 +27,7 @@ title: About - SarahMay Harel
     <img src="/assets/img/flower.png" class="flowerimg">
 </div>
 
-<div class="skillscont pb-5" style="padding-left:unset!important">
+<div class="skillscont pb-5 padrule">
 <div class=" p-0">
     <h2 class="text-center">Skills</h2>
 </div>
@@ -54,7 +54,7 @@ title: About - SarahMay Harel
 <div class="pt-5 ">
     <h2 class="text-center">Experience</h2>
 </div>
-<div class="experience contained  pb-5">
+<div class="experience contained  pb-5 padrule">
     <h5>Assistant Director, Website Operations and eCommerce</h5>
     <p><em>Workman Publishing (2017 &ndash; Present)</em></p>
     <ul>
