--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@ layout: default
 title: Contact - SarahMay Harel
 ---
 
-<div class="contact row">
+<div class="contact row padrule mt-5">
     <div class="col-lg-6 col-sm-12 text-center headshot">
-        <img src="https://i.imgur.com/niPt6xp.png" class="circle mt-5">
+        <img src="assets/img/harel_sarahmay_headshot.JPG" class="circle">
     </div>
 
     <div class="col-lg-6 col-sm-12 intro-text">
@@ -19,3 +19,6 @@ title: Contact - SarahMay Harel
         <p>Send me a message at <a href="mailto:sarahmayharel@gmail.com.">sarahmayharel@gmail.com.</a></p>
     </div>
 </div>
+
+<div class="contactform text-center mt-5">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScWyeh5c2sfsu3U7N2i8TPWBRo1N3dMsFQ1C5NXLWEbBxe3yA/viewform?embedded=true" width="640" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
