Update path for image and font source

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ title: About - SarahMay Harel
 ---
 
 <div class="flower2">
-    <img src="/assets/img/flower 2.1.png" class="flower2img">
+    <img src="./assets/img/flower 2.1.png" class="flower2img">
 </div>
 
 
 <div class="intro pb-5 row pt-0 padrule">
     <div class="col-lg-6 col-sm-12 text-center headshot">
-        <img src="/assets/img/harel_sarahmay_headshot.JPG" class="circle">
+        <img src="./assets/img/harel_sarahmay_headshot.JPG" class="circle">
     </div>
 
     <div class="col-lg-6 col-sm-12 intro-text">
@@ -24,7 +24,7 @@ title: About - SarahMay Harel
 </div>
 
 <div class="flower">
-    <img src="/assets/img/flower.png" class="flowerimg">
+    <img src="./assets/img/flower.png" class="flowerimg">
 </div>
 
 <div class="skillscont pb-5 padrule">
@@ -48,7 +48,7 @@ title: About - SarahMay Harel
 </div>
 
 <div class="mushrooms">
-    <img src="/assets/img/mushroom 2.png" class="mushroomimg">
+    <img src="./assets/img/mushroom 2.png" class="mushroomimg">
 </div>
 
 <div class="pt-5 ">
