Remove art from homepage, add wavy section

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@ layout: default
 title: About - SarahMay Harel
 ---
 
-<div class="flower2">
+<!-- <div class="flower2">
     <img src="./assets/img/flower 2.1.png" class="flower2img">
-</div>
+</div> -->
 
 
-<div class="intro pb-5 row pt-0 padrule">
+<div class="intro row padrule">
     <div class="col-lg-6 col-sm-12 text-center headshot">
         <img src="./assets/img/harel_sarahmay_headshot.JPG" class="circle">
     </div>
 
     <div class="col-lg-6 col-sm-12 intro-text">
         <h2 class="pt-5 intro-name">Hi, I’m SarahMay</h2>
-        <p class="intro-body">I am a website development professional with experience in direct-to-consumer front-end development for Craft
+        <p class="intro-body">I am a website development professional with experience in direct-to-consumer front-end
+            development for Craft
             and WordPress CMS, and Shopify Liquid templates. I am the technical lead for website operations, project
             management, and product marketing at the digital operations department at Workman Publishing, an independent
             book publisher. In my spare time, I enjoy doing crossword puzzles and sudoku, baking, and cultivating the
@@ -23,33 +24,37 @@ title: About - SarahMay Harel
     </div>
 </div>
 
-<div class="flower">
+<!-- <div class="flower">
     <img src="./assets/img/flower.png" class="flowerimg">
+</div> -->
+
+<div class="skillscont padrule">
+    <div class="row">
+        <div class="col-md-6 col-sm-12">
+            <div>
+                <h2 class="text-center p-0">Skills</h2>
+            </div>
+            <div class="skills p-0 m-0 row ">
+                <div class="col-md-6 col-sm-12 text-center">
+                    Front-end Development<br>
+                    eCommerce<br>
+                    AWS S3<br>
+                    Adobe Creative Suite
+                </div>
+                <div class="col-md-6 col-sm-12 text-center">
+                    UX/UI<br>
+                    Project Management<br>
+                    Google Analytics<br>
+                    MailChimp
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="skillscont pb-5 padrule">
-<div class=" p-0">
-    <h2 class="text-center">Skills</h2>
-</div>
-<div class="skills p-0 m-0 row ">
-    <div class="col-md-6 col-sm-12 text-center">
-        Front-end Development<br>
-        eCommerce<br>
-        AWS S3<br>
-        Adobe Creative Suite
-    </div>
-    <div class="col-md-6 col-sm-12 text-center">
-        UX/UI<br>
-        Project Management<br>
-        Google Analytics<br>
-        MailChimp
-    </div>
-</div>
-</div>
-
-<div class="mushrooms">
+<!-- <div class="mushrooms">
     <img src="./assets/img/mushroom 2.png" class="mushroomimg">
-</div>
+</div> -->
 
 <div class="pt-5 ">
     <h2 class="text-center">Experience</h2>
