Update resume page

--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,8 @@ title: Resume - SarahMay Harel
     <a href="/sarahmayharel/assets/img/Harel-SarahMay-Resume.webp" target="_blank"><img src="/sarahmayharel/assets/img/Harel-SarahMay-Resume.webp" class="resume-image"></a>
 </div>
 
-<div class="resume-links text-center">
-    <p style="font-size:large"> TBD!!!
-        <a href="">PDF</a> | <a href="">DOCX</a>
+<div class="resume-links text-center pt-5">
+    <p style="font-size:large">
+        <a href="assets/img/Harel, SarahMay - Resume.pdf">PDF</a> | <a href="assets/img/Harel, SarahMay - Resume.docx">DOCX</a>
     </p>
 </div>
