--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@ layout: default
 title: Resume - SarahMay Harel
 ---
 
-<div class="resume text-center">
+<div class="resume text-center pt-3">
     <a href="/sarahmayharel/assets/img/Harel-SarahMay-Resume.webp" target="_blank"><img src="/sarahmayharel/assets/img/Harel-SarahMay-Resume.webp" class="resume-image"></a>
 </div>
 
