--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,6 @@ title: Projects - SarahMay Harel
 {% include project2.html %}
 {% include project3.html %}
 
-  <div class="text-center">
+  <div class="text-center  pt-5 pb-5">
     <p class="disclaimer">Some aspects of these website images have been replaced in compliance with non-disclosure agreements.</p>
   </div>
