Update project images, fix padding on homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: About - SarahMay Harel
 </div> -->
 
 
-<div class="intro row padrule">
+<div class="intro row padrule m-0">
     <div class="col-lg-6 col-sm-12 text-center headshot">
         <img src="./assets/img/harel_sarahmay_headshot.JPG" class="circle">
     </div>
