--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ title: About - SarahMay Harel
                 </div>
             </div>
         </div>
+        <div class="col-md-6 col-sm-12 text-center"><img src="https://i.imgur.com/mhGjsHt.png" class="d-none d-md-block d-lg-block minimalist"></div>
     </div>
 </div>
 
