--- a/contact.html
+++ b/contact.html
@@ -20,5 +20,5 @@ title: Contact - SarahMay Harel
     </div>
 </div>
 
-<div class="contactform text-center mt-5">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScWyeh5c2sfsu3U7N2i8TPWBRo1N3dMsFQ1C5NXLWEbBxe3yA/viewform?embedded=true" width="640" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+<!-- <div class="contactform text-center mt-5">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScWyeh5c2sfsu3U7N2i8TPWBRo1N3dMsFQ1C5NXLWEbBxe3yA/viewform?embedded=true" width="640" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div> -->
