--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@ title: About - SarahMay Harel
 
     <div class="col-lg-6 col-sm-12 intro-text">
         <h2 class="pt-5 intro-name">Hi, I’m SarahMay</h2>
-        <p class="intro-body">I am a website development professional with experience in direct-to-consumer front-end
-            development for Craft
-            and WordPress CMS, and Shopify Liquid templates. I am the technical lead for website operations, project
-            management, and product marketing at the digital operations department at Workman Publishing, an independent
-            book publisher. In my spare time, I enjoy doing crossword puzzles and sudoku, baking, and cultivating the
-            80+ plants in my apartment.</p>
+        <p class="intro-body">I am a website development professional with experience in front-end eCommerce and UX/UI development using HTML, CSS, SASS, Bootstrap, JavaScript, Jekyll, and Shopify's Ruby-based Liquid template language. My goal is to build websites, systems, and products that are functional, thoughtfully designed, and user-friendly. In my spare time, I enjoy baking, solving crossword puzzles, and cultivating the 80+ plants in my apartment.</p>
     </div>
 </div>
 
