New bio, adjust headshot styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@ title: About - SarahMay Harel
 
     <div class="col-lg-6 col-sm-12 intro-text">
         <h2 class="pt-5 intro-name">Hi, I’m SarahMay</h2>
-        <p class="intro-body">I am a website development professional with experience in front-end eCommerce and UX/UI development using HTML, CSS, SASS, Bootstrap, JavaScript, Jekyll, and Shopify's Ruby-based Liquid template language. My goal is to build websites, systems, and products that are functional, thoughtfully designed, and user-friendly. In my spare time, I enjoy baking, solving crossword puzzles, and cultivating the 80+ plants in my apartment.</p>
+        <p class="intro-body">I'm a <b>puzzle solver</b>. One of my favorite activities is sitting down with a crossword, sudoku, or yes, a Wordle, and feeling the mental exercise of a challenge. It's what drew me to <b>software engineering</b>, where puzzles and problems to solve abound.</p>
+
+        <p>I enjoy the challenge of learning new tools, systems, and languages, constantly improving on legacy codebases, and developing projects that push my skills in new directions.</p>
+            
+        <p>I have experience in front-end and UX/UI development using HTML, CSS, SASS, Bootstrap, JavaScript, Jekyll, and Shopify's Ruby-based Liquid template language. I’m inspired by clean design and user experiences, and my goal is to build websites, systems, and products that are <b>functional, thoughtfully designed, and user-friendly</b>.</p>            
     </div>
 </div>
 
@@ -42,15 +46,15 @@ title: About - SarahMay Harel
             <div class="skills p-0 m-0 row ">
                 <div class="col-md-6 col-sm-12 text-center">
                     Front-end Development<br>
-                    eCommerce<br>
+                    Project Management<br>
                     AWS S3<br>
-                    Adobe Creative Suite
+                    Google Analytics
                 </div>
                 <div class="col-md-6 col-sm-12 text-center">
                     UX/UI<br>
-                    Project Management<br>
-                    Google Analytics<br>
-                    MailChimp
+                    eCommerce & SEO<br>
+                    MailChimp Development<br>
+                    Adobe Creative Suite
                 </div>
             </div>
         </div>
