Remove breaking line from skills

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ title: About - SarahMay Harel
                 <div class="col-md-6 col-sm-12 text-center">
                     UX/UI<br>
                     eCommerce & SEO<br>
-                    MailChimp Development<br>
+                    MailChimp<br>
                     Adobe Creative Suite
                 </div>
             </div>
