--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: About - SarahMay Harel
     <div class="col-lg-6 col-sm-12 intro-text">
         <h2 class="pt-5 intro-name">Hi, I’m SarahMay</h2>
         <p class="intro-body">I'm a <b>puzzle solver</b>. One of my favorite activities is sitting down with a
-            crossword, sudoku, or yes, a Wordle, and feeling the mental exercise of a challenge. That drive is what drew
+            crossword, sudoku, or yes, a Wordle, and feeling the mental exercise of a challenge. That instinct is what drew
             me to <b>software engineering</b>, where puzzles and problems to solve abound.</p>
 
         <p>I enjoy the challenge of learning new tools, systems, and languages, constantly improving on legacy
