WIP dark mode and emoji

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ title: About - SarahMay Harel
     <div class="col-lg-6 col-sm-12 intro-text">
         <h2 class="pt-5 intro-name">Hi, I’m SarahMay</h2>
         <p class="intro-body">I'm a <b>puzzle solver</b>. One of my favorite activities is sitting down with a
-            crossword, sudoku, or yes, a Wordle, and feeling the mental exercise of a challenge. That instinct is what drew
+            crossword, sudoku, or yes, a Wordle, and feeling the mental exercise of a challenge. That instinct is what
+            drew
             me to <b>software engineering</b>, where puzzles and problems to solve abound.</p>
 
         <p>I enjoy the challenge of learning new tools, systems, and languages, constantly improving on legacy
@@ -66,8 +67,10 @@ title: About - SarahMay Harel
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-sm-12 text-center"><img src="https://i.imgur.com/mhGjsHt.png"
-                class="d-none d-md-block d-lg-block minimalist"></div>
+        <!-- <div class="col-md-6 col-sm-12 text-center"><img src="https://i.imgur.com/mhGjsHt.png"
+                class="d-none d-md-block d-lg-block minimalist"></div> -->
+        <div class="col-md-6 col-sm-12 text-center"><img src="assets/img/—Pngtree—sparkling stars shiny sparks yellow_6320234.png"
+                class="d-none d-md-block d-lg-block minimalist hide stars"></div>
     </div>
 </div>
 
@@ -209,7 +212,8 @@ title: About - SarahMay Harel
         </div>
 
         <div class="logo">
-            <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png" class="tools"></div>
+            <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png" class="tools">
+            </div>
             <div class="logocaption">Jekyll</div>
         </div>
 
@@ -261,106 +265,107 @@ title: About - SarahMay Harel
     </div>
 
     <div class="hiding d-sm-block d-md-none">
-    <div class="row">
-        <div class="col-md-2 col-sm-6">
-            <div class="logo">
-                <img src="assets/img/logos/HTML5-Logo-color.png" class="tools">
-                <div class="logocaption">HTML</div>
+        <div class="row">
+            <div class="col-md-2 col-sm-6">
+                <div class="logo">
+                    <img src="assets/img/logos/HTML5-Logo-color.png" class="tools">
+                    <div class="logocaption">HTML</div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <img src="assets/img/logos/CSS3-Logo-color.png" class="tools">
-                <div class="logocaption">CSS</div>
+            <div class="col-md-2 col-sm-12">
+                <div class="logo">
+                    <img src="assets/img/logos/CSS3-Logo-color.png" class="tools">
+                    <div class="logocaption">CSS</div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <img src="assets/img/logos/JavaScript-logo.png" class="tools">
-                <div class="logocaption">JavaScript</div>
+            <div class="col-md-2 col-sm-12">
+                <div class="logo">
+                    <img src="assets/img/logos/JavaScript-logo.png" class="tools">
+                    <div class="logocaption">JavaScript</div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <img src="assets/img/logos/GitHub-Logo.png" class="tools">
-                <div class="logocaption">GitHub</div>
+            <div class="col-md-2 col-sm-12">
+                <div class="logo">
+                    <img src="assets/img/logos/GitHub-Logo.png" class="tools">
+                    <div class="logocaption">GitHub</div>
+                </div>
             </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <img src="assets/img/logos/Git-Logo-color.png" class="tools">
-                <div class="logocaption">Git</div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <img src="assets/img/logos/Shopify logo.png" class="tools">
-                <div class="logocaption">Shopify</div>
-            </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png" class="tools"></div>
-                <div class="logocaption">Jekyll</div>
-            </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <img src="assets/img/logos/Figma-Icon.svg" class="tools">
-                <div class="logocaption">Figma</div>
-            </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <img src="assets/img/logos/Zeplin logo.png" class="tools">
-                <div class="logocaption">Zeplin</div>
-            </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <img src="assets/img/logos/vscode-logo.png" class="tools">
-                <div class="logocaption">VS Code</div>
+            <div class="col-md-2 col-sm-12">
+                <div class="logo">
+                    <img src="assets/img/logos/Git-Logo-color.png" class="tools">
+                    <div class="logocaption">Git</div>
+                </div>
             </div>
         </div>
         <div class="row">
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <div><img src="assets/img/logos/google analytics logo.png" class="tools"></div>
-                <div class="logocaption">Google Analytics</div>
-            </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <div><img src="assets/img/logos/sass logo.png" class="tools"></div>
-                <div class="logocaption">Sass</div>
-            </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <div>
-                    <img src="assets/img/logos/bootstrap-logo.svg" class="tools">
+            <div class="col-md-2 col-sm-12">
+                <div class="logo">
+                    <img src="assets/img/logos/Shopify logo.png" class="tools">
+                    <div class="logocaption">Shopify</div>
                 </div>
-                <div class="logocaption">Bootstrap</div>
+            </div>
+            <div class="col-md-2 col-sm-12">
+                <div class="logo">
+                    <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png"
+                            class="tools"></div>
+                    <div class="logocaption">Jekyll</div>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-12">
+                <div class="logo">
+                    <img src="assets/img/logos/Figma-Icon.svg" class="tools">
+                    <div class="logocaption">Figma</div>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-12">
+                <div class="logo">
+                    <img src="assets/img/logos/Zeplin logo.png" class="tools">
+                    <div class="logocaption">Zeplin</div>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-12">
+                <div class="logo">
+                    <img src="assets/img/logos/vscode-logo.png" class="tools">
+                    <div class="logocaption">VS Code</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <div><img src="assets/img/logos/google analytics logo.png" class="tools"></div>
+                        <div class="logocaption">Google Analytics</div>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <div><img src="assets/img/logos/sass logo.png" class="tools"></div>
+                        <div class="logocaption">Sass</div>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <div>
+                            <img src="assets/img/logos/bootstrap-logo.svg" class="tools">
+                        </div>
+                        <div class="logocaption">Bootstrap</div>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <div><img src="assets/img/logos/WordPress-logo.png" class="tools"></div>
+                        <div class="logocaption">WordPress</div>
+                    </div>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    <div class="logo">
+                        <div class="short-logo"><img src="assets/img/logos/logo-craft-cms.svg" class="tools"></div>
+                        <div class="logocaption">Craft CMS</div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <div><img src="assets/img/logos/WordPress-logo.png" class="tools"></div>
-                <div class="logocaption">WordPress</div>
-            </div>
-        </div>
-        <div class="col-md-2 col-sm-12">
-            <div class="logo">
-                <div class="short-logo"><img src="assets/img/logos/logo-craft-cms.svg" class="tools"></div>
-                <div class="logocaption">Craft CMS</div>
-            </div>
-        </div>
-    </div>
-</div>
 
-        
+
     </div>
 </div>
 
