--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@ title: About - SarahMay Harel
                 </div>
             </div>
         </div>
-        <!-- <div class="col-md-6 col-sm-12 text-center"><img src="https://i.imgur.com/mhGjsHt.png"
-                class="d-none d-md-block d-lg-block minimalist"></div> -->
-        <div class="col-md-6 col-sm-12 text-center"><img src="assets/img/—Pngtree—sparkling stars shiny sparks yellow_6320234.png"
-                class="d-none d-md-block d-lg-block minimalist hide stars"></div>
+        <div class="col-md-6 col-sm-12 text-center" id="imageCol">
+            <img src="https://i.imgur.com/mhGjsHt.png"
+            id="leafJs"
+            class="d-none d-md-block d-lg-block minimalist leaf">
+            <img src="assets/img/—Pngtree—sparkling stars shiny sparks yellow_6320234.png"
+            id="starsJs"
+            class="d-none d-md-block d-lg-block minimalist stars">
+            </div>
     </div>
 </div>
 
