--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ title: About - SarahMay Harel
             <img src="https://i.imgur.com/mhGjsHt.png"
             id="leafJs"
             class="d-none d-md-block d-lg-block minimalist leaf">
-            <img src="assets/img/—Pngtree—sparkling stars shiny sparks yellow_6320234.png"
+            <!-- <img src="assets/img/—Pngtree—sparkling stars shiny sparks yellow_6320234.png"
             id="starsJs"
-            class="d-none d-md-block d-lg-block minimalist stars">
+            class="d-none d-md-block d-lg-block minimalist stars"> -->
             </div>
     </div>
 </div>
@@ -201,7 +201,7 @@ title: About - SarahMay Harel
         </div>
 
         <div class="logo">
-            <img src="assets/img/logos/GitHub-Logo.png" class="tools">
+            <img src="assets/img/logos/GitHub-Logo.png" class="tools darklogo">
             <div class="logocaption">GitHub</div>
         </div>
 
@@ -216,7 +216,7 @@ title: About - SarahMay Harel
         </div>
 
         <div class="logo">
-            <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png" class="tools">
+            <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png" class="tools darklogo">
             </div>
             <div class="logocaption">Jekyll</div>
         </div>
@@ -256,7 +256,7 @@ title: About - SarahMay Harel
         </div>
 
         <div class="logo">
-            <div><img src="assets/img/logos/WordPress-logo.png" class="tools"></div>
+            <div><img src="assets/img/logos/WordPress-logo.png" class="tools darklogo"></div>
             <div class="logocaption">WordPress</div>
         </div>
 
@@ -290,7 +290,7 @@ title: About - SarahMay Harel
             </div>
             <div class="col-md-2 col-sm-12">
                 <div class="logo">
-                    <img src="assets/img/logos/GitHub-Logo.png" class="tools">
+                    <img src="assets/img/logos/GitHub-Logo.png" class="tools darklogo">
                     <div class="logocaption">GitHub</div>
                 </div>
             </div>
@@ -311,7 +311,7 @@ title: About - SarahMay Harel
             <div class="col-md-2 col-sm-12">
                 <div class="logo">
                     <div class="short-logo"><img src="assets/img/logos/jekyll-logo-black-red-transparent.png"
-                            class="tools"></div>
+                            class="tools darklogo"></div>
                     <div class="logocaption">Jekyll</div>
                 </div>
             </div>
@@ -356,7 +356,7 @@ title: About - SarahMay Harel
                 </div>
                 <div class="col-md-2 col-sm-12">
                     <div class="logo">
-                        <div><img src="assets/img/logos/WordPress-logo.png" class="tools"></div>
+                        <div><img src="assets/img/logos/WordPress-logo.png" class="tools darklogo"></div>
                         <div class="logocaption">WordPress</div>
                     </div>
                 </div>
