Add project, adjust contact page content position, recipe page

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact - SarahMay Harel
 ---
 
-<div class="contact row padrule mt-5">
+<div class="contact intro row padrule mt-5 ml-0">
     <div class="col-lg-6 col-sm-12 text-center headshot">
         <img src="assets/img/harel_sarahmay_headshot.JPG" class="circle">
     </div>
