--- a/israeli-salad-recipe.html
+++ b/israeli-salad-recipe.html
@@ -1,14 +1,15 @@
 ---
-layout: default
+layout: default-tristan
 title: Israeli Salad Recipe
 ---
+<link rel="stylesheet" href="./assets/css/recipe.css">
 
 <hr class="hr">
-<div class="row">
-    <div class="col-md-6  col-sm-12 pb-3">
-        <img src="assets/img/israeli-salad.jpeg" alt="Israeli Salad" style="max-width: 100%;">
+<div class="row padrule">
+    <div class="col-md-6  col-sm-12 pb-3 headshot">
+        <img src="assets/img/israeli-salad.jpeg" alt="Israeli Salad" style="max-width: 100%;" class="recipe-image">
     </div>
-    <div class="col-md-6 col-sm-12">
+    <div class="col-md-6 col-sm-12 pb-5">
         <h1>Israeli Salad</h1>
         <h2>Description</h2>
         <p>Healthy and refreshing</p>
