--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@ layout: default
 title: Projects - SarahMay Harel
 ---
 
+{% include project5.html %}
 {% include project1.html %}
 {% include project2.html %}
 {% include project3.html %}
