--- a/resume.html
+++ b/resume.html
@@ -4,11 +4,11 @@ title: Resume - SarahMay Harel
 ---
 
 <div class="resume text-center pt-3">
-    <a href="/assets/img/Harel-SarahMay-Resume.webp" target="_blank"><img src="/assets/img/Harel-SarahMay-Resume.webp" class="resume-image"></a>
+    <a href="/assets/img/Harel, SarahMay - Resume - December 2022.pdf" target="_blank"><img src="/assets/img/Harel, SarahMay - Resume - December 2022.png" class="resume-image"></a>
 </div>
 
 <div class="resume-links text-center pt-5">
     <p style="font-size:large">
-        <a href="assets/img/Harel, SarahMay - Resume.pdf">PDF</a> | <a href="assets/img/Harel, SarahMay - Resume.docx">DOCX</a>
+        <a href="/assets/img/Harel, SarahMay - Resume - December 2022.pdf">PDF</a> | <a href="/assets/img/Harel, SarahMay - Resume - December 2022.docx">DOCX</a>
     </p>
 </div>
