--- a/index.html
+++ b/index.html
@@ -54,16 +54,20 @@ title: About - SarahMay Harel
             </div>
             <div class="skills p-0 m-0 row ">
                 <div class="col-md-6 col-sm-12 text-center">
-                    Frontend Development<br>
-                    Project Management<br>
-                    AWS S3<br>
-                    Google Analytics
+                    HTML, CSS, & SCSS<br>
+                    Shopify & Liquid<br>
+                    Jekyll<br>
+                    Bootstrap<br>
+                    Google Analytics<br>
+                    Project Management
                 </div>
                 <div class="col-md-6 col-sm-12 text-center">
+                    Git & GitHub<br>
+                    JavaScript & JQuery<br>
+                    Netlify<br>
                     UX/UI<br>
                     eCommerce & SEO<br>
-                    MailChimp<br>
-                    Adobe Creative Suite
+                    MailChimp
                 </div>
             </div>
         </div>
