--- a/israeli-salad-recipe.html
+++ b/israeli-salad-recipe.html
@@ -10,7 +10,7 @@ title: Israeli Salad Recipe
         <img src="assets/img/israeli-salad.jpeg" alt="Israeli Salad" class="recipe-image">
     </div>
     <div class="col-md-6 col-sm-12 pb-5">
-        <h1>Israeli Salad</h1>
+        <h1>Israeli Salad!!!</h1>
         <!-- <h2>Description</h2>
         <p>Healthy and refreshing</p> -->
         <h2>Ingredients</h2>
