--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 ---
 layout: default
 title: About - SarahMay Harel
+header: false
 ---
 
 <!-- <div class="flower2">
     <img src="./assets/img/flower 2.1.png" class="flower2img">
 </div> -->
 
+<section class="hello padrule">
+    <h2>Hi, I'm <br> SarahMay Harel</h2>
+    <h3 id="typed"></h3>
+</section>
+
+    <div class="shape shape-bottom">
+        <div class="custom-shape-divider-top-1658328596">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
+    </div>
 
 <div class="intro row padrule m-0">
     <div class="col-lg-6 col-sm-12 text-center headshot">
@@ -376,6 +391,7 @@ title: About - SarahMay Harel
 
     </div>
 </div>
+
 
 <!-- 
 <div class="plant">
