--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ header: false
     </div>
 
     <div class="col-lg-6 col-sm-12 intro-text">
-        <h2 class="pt-5 intro-name">About Me</h2>
+        <h2 id="about" class="pt-5 intro-name">About Me</h2>
         <p class="intro-body">I am a front end web developer located in New York. I’m inspired by clean design and
             intuitive, dynamic user experiences, and strive to bring those elements to every project I work on. </p>
         <p>My experience in front end and UX/UI development includes JavaScript, JQuery, SCSS, Bootstrap, Jekyll, and
@@ -153,6 +153,9 @@ header: false
         </ul>
 
     </div>
+    <div class="text-center pb-5">
+        <a href="https://www.sarahmayharel.com/assets/img/Harel,%20SarahMay%20-%20Resume%20-%20December%202022.pdf" style="text-decoration: underline wavy; text-underline-offset: 8px;">Download Full Resume</a>
+    </div>
 </section>
 
 
@@ -178,6 +181,7 @@ header: false
                 <div class="skills p-0 m-0">
                     <div class="">
                         <ul>
+                            <li>Learn SCSS, <em>Codecademy</em></li>
                             <li>JavaScript Circuit, <em>General Assembly</em></li>
                             <li>HTML & CSS, <em>General Assembly</em></li>
                             <li>Google Analytics Bootcamp, <em>General Assembly</em></li>
